#50 - Fix skills card layout on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ main {
 
 .recommendation-cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 2em;
 }
 
